# tradeguard

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
static/: style.css
tests/: test_models.py  test_risk.py  test_validator.py
tradeguard/: __init__.py  cli.py  models.py  risk.py  storage.py  validator.py  web.py  web_server.py
tradeguard/templates/: index.html
